# monty-standards

./: .gitignore  .monty.yaml  AGENTS.md  ANTI_PATTERNS.md  CONTRIBUTING.md  LICENSE  PATTERNS.md  README.md  VERSIONING.md
.github/workflows/: ci.yml
PATTERNS/: README.md  weighted-memory-system.md
docs/: ANTI_PATTERNS_PROPOSAL.md  INTENT_BASED_PROPOSAL.md  record-in-github.md
templates/: .gitignore
templates/go/: .gitignore  README.md  go.mod  main.go
templates/node/: .eslintrc.json  .gitignore  README.md  package.json  vitest.config.js
templates/node/src/: index.js
templates/node/tests/: example.test.js
templates/python/: .gitignore  README.md  pyproject.toml
templates/python/src/: __init__.py
templates/python/tests/: test_example.py
templates/rust/: .gitignore  Cargo.toml  README.md
templates/rust/src/: main.rs
